--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,70 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Document</title>
-        <link rel="stylesheet" href="assets/css/styles.css" />
+        <title>Routes Table</title>
+    <style>
+        table {
+            width: 100%;
+            border-collapse: collapse;
+        }
+        th, td {
+            border: 1px solid #dddddd;
+            text-align: left;
+            padding: 8px;
+        }
+        th {
+            background-color: #f2f2f2;
+        }
+    </style>
     </head>
-    <body>
-        <h1>Ma belle page Web 2</h1>
-    </body>
+<body>
+
+<table>
+    <tr>
+        <th>Route</th>
+        <th>Description</th>
+    </tr>
+    <tr>
+        <td>Film initialisation + Get</td>
+        <td><a href="https://nodejstp1.onrender.com/films">https://nodejstp1.onrender.com/films</a></td>
+    </tr>
+    <tr>
+        <td>Film Get par ID</td>
+        <td><a href="https://nodejstp1.onrender.com/films/0DNFZBSgAcwaOdZsPjjr">https://nodejstp1.onrender.com/films/0DNFZBSgAcwaOdZsPjjr</a></td>
+    </tr>
+    <tr>
+        <td>Film PUT</td>
+        <td><a href="https://nodejstp1.onrender.com/films/0DNFZBSgAcwaOdZsPjjr">https://nodejstp1.onrender.com/films/0DNFZBSgAcwaOdZsPjjr</a></td>
+    </tr>
+    <tr>
+        <td>Film DELETE</td>
+        <td><a href="https://nodejstp1.onrender.com/films/0DNFZBSgAcwaOdZsPjjr">https://nodejstp1.onrender.com/films/0DNFZBSgAcwaOdZsPjjr</a></td>
+    </tr>
+    <tr>
+        <td>Utilisateur initialisation + Get</td>
+        <td><a href="https://nodejstp1.onrender.com/utilisateur">https://nodejstp1.onrender.com/utilisateur</a></td>
+    </tr>
+    <tr>
+        <td>Utilisateur Get par ID</td>
+        <td><a href="https://nodejstp1.onrender.com/utilisateur/rS25ELDo6A5B82txrs9u">https://nodejstp1.onrender.com/utilisateur/rS25ELDo6A5B82txrs9u</a></td>
+    </tr>
+    <tr>
+        <td>Utilisateur Inscription</td>
+        <td><a href="https://nodejstp1.onrender.com/utilisateur/inscription">https://nodejstp1.onrender.com/utilisateur/inscription</a></td>
+    </tr>
+    <tr>
+        <td>Utilisateur Connexion</td>
+        <td><a href="https://nodejstp1.onrender.com/utilisateur/connexion">https://nodejstp1.onrender.com/utilisateur/connexion</a></td>
+    </tr>
+    <tr>
+        <td>Utilisateur PUT</td>
+        <td><a href="https://nodejstp1.onrender.com/Utilisateur/rS25ELDo6A5B82txrs9u">https://nodejstp1.onrender.com/Utilisateur/rS25ELDo6A5B82txrs9u</a></td>
+    </tr>
+    <tr>
+        <td>Utilisateur DELETE</td>
+        <td><a href="https://nodejstp1.onrender.com/Utilisateur/rS25ELDo6A5B82txrs9u">https://nodejstp1.onrender.com/Utilisateur/rS25ELDo6A5B82txrs9u</a></td>
+    </tr>
+</table>
+
+</body>
 </html>
